# alloy

./: Installation.md  LICENSE  README.MD  README.md  install.sh  pyproject.toml  requirements.txt
.alloy/: config.yaml
alloy/: cli-t.py  cli.py  config.py
alloy/core/: os_detector.py  parser.py  resolver.py  runner.py
alloy/managers/: apt.py  base.py  brew.py  choco.py  dnf.py  pacman.py
alloy/registry/: api_client.py  cache.py  cache_manager.py  client.py  exceptions.py  models.py
docs/mine/: RESTRICTIONS.md  commands.md  file_structure.md  file_structure_with_api.md  linux_installation_instruction.md
docs/mine/temp/: README_01.MD
old_scripts/: install-old.sh
tests/: test_os_detector.py  test_parser.py  test_resolver.py
tests/managers/: test_apt.py
tests/registry/: test_api_client.py
